--- a/css/index.css
+++ b/css/index.css
@@ -39,18 +39,14 @@ a {
 }
 
 h1 {
-  font-size: 0;
-}
-
-h2 {
   font-size: 2.2rem;
 }
 
-h3 {
+h2 {
   font-size: 1.6rem;
 }
 
-h4 {
+h3 {
   font-size: 1.2rem;
 }
 
@@ -202,6 +198,9 @@ body {
 header {
   position: relative;
   width: 100vw;
+}
+header #home h1 {
+  display: none;
 }
 header #home .logo {
   position: fixed;
@@ -915,7 +914,6 @@ main #portfolio .pofol-box .flexbox .pofol-info .link-btn {
   display: flex;
   margin-top: 20px;
 }
-main #portfolio .pofol-box .flexbox .pofol-info .link-btn button,
 main #portfolio .pofol-box .flexbox .pofol-info .link-btn a {
   display: block;
   position: relative;
@@ -930,11 +928,9 @@ main #portfolio .pofol-box .flexbox .pofol-info .link-btn a {
   overflow: hidden;
   z-index: 1;
 }
-main #portfolio .pofol-box .flexbox .pofol-info .link-btn button:first-child,
 main #portfolio .pofol-box .flexbox .pofol-info .link-btn a:first-child {
   margin-right: 24px;
 }
-main #portfolio .pofol-box .flexbox .pofol-info .link-btn button:after,
 main #portfolio .pofol-box .flexbox .pofol-info .link-btn a:after {
   position: absolute;
   content: "";
@@ -945,14 +941,12 @@ main #portfolio .pofol-box .flexbox .pofol-info .link-btn a:after {
   z-index: -1;
   border-radius: 5px;
   background-color: #77addf;
-  background-image: linear-gradient(315deg, #d9adf0 0%, #c096ea 88%);
+  background-image: linear-gradient(315deg, #94c0e9 0%, #c6ddf3 88%);
   transition: all 0.3s ease;
 }
-main #portfolio .pofol-box .flexbox .pofol-info .link-btn button:hover,
 main #portfolio .pofol-box .flexbox .pofol-info .link-btn a:hover {
   color: #fff;
 }
-main #portfolio .pofol-box .flexbox .pofol-info .link-btn button:hover:after,
 main #portfolio .pofol-box .flexbox .pofol-info .link-btn a:hover:after {
   top: auto;
   bottom: 0;
