--- a/scss/index.scss
+++ b/scss/index.scss
@@ -110,6 +110,10 @@ header {
   width: 100vw;
 
   #home {
+    h1 {
+      display: none;
+    }
+    
     .logo {
       position: fixed;
       padding: 20px;
@@ -245,9 +249,7 @@ header {
         border-radius: 20px;
         border: 1px solid #ccc;
         backdrop-filter: blur(3px);
-        // background-color: rgba(119, 173, 223, .6);
         background: rgba(255, 255, 255, .84);
-        // background: rgba(221, 239, 196, .9);
         transition: .5s;
       }
     } // nav
@@ -751,7 +753,6 @@ main {
   #portfolio {
     text-align: center;
 
-
     // pofol-box 공통소스 시작
     .pofol-box {
       width: 100%;
@@ -817,7 +818,6 @@ main {
             display: flex;
             margin-top: 20px;
   
-            button,
             a {
               display: block;
               position: relative;
@@ -846,7 +846,7 @@ main {
                 z-index: -1;
                 border-radius: 5px;
                 background-color: $color-main;
-                background-image: linear-gradient(315deg, #d9adf0 0%, #c096ea 88%);
+                background-image: linear-gradient(315deg, #94c0e9 0%, #c6ddf3 88%);
                 transition: all 0.3s ease;
               }
                 
@@ -859,7 +859,7 @@ main {
                 bottom: 0;
                 height: 100%;
               }
-            } // button
+            } // a(버튼역할)
 
             a {
               text-align: center;
