--- a/css/index.css
+++ b/css/index.css
@@ -890,6 +890,19 @@ main #portfolio .pofol-box .flexbox .pofol-thumbnail img {
     margin-bottom: 0;
   }
 }
+main #portfolio .pofol-box .flexbox .pofol-thumbnail .git-repo {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  width: 10%;
+  padding: 4px;
+  background-color: #fff;
+}
+main #portfolio .pofol-box .flexbox .pofol-thumbnail .git-repo:hover {
+  width: 9.6%;
+  box-shadow: none;
+  transition: all 0.2s;
+}
 main #portfolio .pofol-box .flexbox .pofol-info {
   text-align: left;
 }
