--- a/scss/index.scss
+++ b/scss/index.scss
@@ -790,6 +790,21 @@ main {
               margin-bottom: 0;
             }
           } // img
+
+          .git-repo {
+            position: absolute;
+            right: 10px;
+            bottom: 10px;
+            width: 10%;
+            padding: 4px;
+            background-color: #fff;
+
+            &:hover {
+              width: 9.6%;
+              box-shadow: none;
+              transition: all .2s;
+            }
+          }
         } // pofol-thumbnail
 
         .pofol-info {
